--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	<script type="text/javascript" src="library/angular.js"></script>
     <script type="text/javascript" src="library/angular-route.js"></script>
 	<script type="text/javascript" src="library/angular-cookies.min.js"></script>
+    <script type="text/javascript" src="library/ui-bootstrap-tpls.min.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/loginCtrl.js"></script>
 	<script src="scripts/modules/loginService.js"></script>
+    <script src="scripts/modules/dataService.js.js"></script>
 
 </head>
 <body>
