--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
 
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/style.css">
 	
 	<script type="text/javascript" src="library/angular.js"></script>
     <script type="text/javascript" src="library/angular-route.js"></script>
@@ -14,15 +17,17 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/loginCtrl.js"></script>
 	<script src="scripts/modules/loginService.js"></script>
-    <script src="scripts/modules/dataService.js.js"></script>
+    <script src="scripts/modules/dataService.js"></script>
 
 </head>
 <body>
-F&H
-1+1={{1+1}}
+
+<header>
+
+</header>
+
+    <div class="container" ng-view> </div>
 
 
-
-<div class="container" ng-view> </div>
 </body>
 </html>
