--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="library/angular-cookies.min.js"></script>
 
     <script src="scripts/app.js"></script>
+    <script src="scripts/modules/dataService.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/loginCtrl.js"></script>
 	<script src="scripts/modules/loginService.js"></script>
