--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 
-<header>
-
+<header ng-show="authenticated">
+    <p>Welcome {{ currentUser.Username }}</p>
 </header>
 
     <div class="container" ng-view> </div>
