--- a/index.html
+++ b/index.html
@@ -26,7 +26,36 @@
 <body>
 
 <header>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Fit and Healthy</a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Programs <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Trainings</a></li>
+                    <li><a href="#">Exercises</a></li>
+                    <li><a href="#">Diets</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li ng-show="!$root.authenticated"><a href="#/login">LogIn</a></li>
+                    <li ng-show="!$root.authenticated"><a href="#">Sign Up</a></li>
+                    <li ng-show="$root.authenticated"><a href="#">{{$root.currentuUser.Username}}</a></li>
+                    <li ng-show="$root.authenticated"><a href="#/logout">Log out</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 </header>
 
     <div class="container" ng-view> </div>
