--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/loginCtrl.js"></script>
     <script src="scripts/controllers/registrationCtrl.js"></script>
+    <script src="scripts/controllers/trainingsCtrl.js"></script>
+    <script src="scripts/controllers/headerCtrl.js"></script>
+
+
 
     <script src="scripts/modules/loginService.js"></script>
     <script src="scripts/modules/dataService.js"></script>
@@ -26,7 +30,8 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-default">
+    <!--<div ng-controller="HeaderCtrl">-->
+       <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -42,10 +47,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#/main">Programs <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Trainings</a></li>
-                    <li><a href="#">Exercises</a></li>
-                    <li><a href="#">Diets</a></li>
+                    <li ng-class="{ active: isActive('#/main')}"><a href="#/main">Programs <span class="sr-only">(current)</span></a></li>
+                    <li ng-class="{ active: isActive('#/trinings')}" ><a href="#/trainings">Trainings</a></li>
+                    <li ng-class="{ active: isActive('#/exercises')}"><a href="#/exercises">Exercises</a></li>
+                    <li ng-class="{ active: isActive('#/diets')}"><a href="#/diets">Diets</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li ng-show="!$root.authenticated"><a href="#/login">LogIn</a></li>
@@ -56,6 +61,7 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+    <!--</div>-->
 </header>
 
     <div class="container" ng-view> </div>
