program add, delete, detail, added trainings, diets and exercises

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <script src="scripts/controllers/loginCtrl.js"></script>
     <script src="scripts/controllers/registrationCtrl.js"></script>
     <script src="scripts/controllers/trainingsCtrl.js"></script>
+    <script src="scripts/controllers/exercisesCtrl.js"></script>
+    <script src="scripts/controllers/dietsCtrl.js"></script>
+    <script src="scripts/controllers/programDetailCtrl.js"></script>
+
+
     <script src="scripts/controllers/headerCtrl.js"></script>
 
 
