--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/modules/dataService.js"></script>
-    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/programCtrl.js"></script>
     <script src="scripts/controllers/loginCtrl.js"></script>
     <script src="scripts/controllers/registrationCtrl.js"></script>
     <script src="scripts/controllers/trainingsCtrl.js"></script>
     <script src="scripts/controllers/exercisesCtrl.js"></script>
     <script src="scripts/controllers/dietsCtrl.js"></script>
     <script src="scripts/controllers/programDetailCtrl.js"></script>
+    <script src="scripts/controllers/mainCtrl.js"></script>
 
     <script src="scripts/controllers/headerCtrl.js"></script>
 
@@ -49,7 +50,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li ng-class="{ active: isActive('#/main')}"><a href="#/main">Programs <span class="sr-only">(current)</span></a></li>
+                    <li ng-class="{ active: isActive('#/programs')}"><a href="#/programs">Programs <span class="sr-only">(current)</span></a></li>
                     <li ng-class="{ active: isActive('#/trinings')}" ><a href="#/trainings">Trainings</a></li>
                     <li ng-class="{ active: isActive('#/exercises')}"><a href="#/exercises">Exercises</a></li>
                     <li ng-class="{ active: isActive('#/diets')}"><a href="#/diets">Diets</a></li>
